Modules can now request permissions
